Screenshot: RTL fixes and scrollbar css fix

--- a/Screenshot/Screenshot/css/Screenshot.scss
+++ b/Screenshot/Screenshot/css/Screenshot.scss
@@ -159,7 +159,8 @@
 }
 
 .esri-screenshot__js-screenshot-image {
-  width: 100%;
+  max-width: 100%;
+  width: auto;
   background-color: #fff;
 }
 
